@@ -1,3 +1,4 @@
+	* made seeding choking algorithm configurable
 	* deprecated setters for max connections, max half-open, upload and download
 	  rates and unchoke slots. These are now set through session_settings
 	* added functions to query an individual peer's upload and download limit
